--- a/app/design/frontend/Magento/Custom/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Magento/Custom/Magento_Theme/layout/default_head_blocks.xml
@@ -10,12 +10,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
         <css src="css/fontawesome/font-awesome.min.css" media="all" />
 		<css src="css/fontpeicon/pe-icon-7-stroke.css" media="all" />
+
         <css src="css/styles-m.css"/>
         <css src="css/custom_style-l.css" media="screen and (min-width: 768px)"/>
         <css src="css/custom_style-s.css" media="screen and (max-width: 768px)"/>
         <css src="css/print.css" media="print"/>
         <css src="css/custom_style.css" media="all"/>
-        <!-- <script src="js/customjs.js" /> -->
+        <!-- <script src="js/custom-main.js" /> -->
     </head>
     
 </page>
