--- a/app/design/frontend/Magento/Custom/web/css/custom_style-l.css
+++ b/app/design/frontend/Magento/Custom/web/css/custom_style-l.css
@@ -1,3 +1,8 @@
+
+.main-custom-container{
+    max-width : 1200px;
+    margin : auto
+}
 .nav-sections-item-content {
     margin-left : 30px;
 }
@@ -36,7 +41,7 @@
     letter-spacing: 0.05em;
     padding: 0 40px;
 }
-.container-custom-category ul.list-title>li.active a,container-custom-category ul.list-title>li.active a:focus,container-custom-category ul.list-title>li.active a:hover{
+.container-custom-category ul.list-title>li.active a,.container-custom-category ul.list-title>li.active a:focus,.container-custom-category ul.list-title>li.active a:hover{
     color: #72C0AC;
     cursor: default;
     background-color: #fff;
@@ -54,17 +59,24 @@
     padding: 20px;
     width: 25%;
 }
+.product-tab-carousel .items a:hover{
+    text-decoration : none;
+}
 .product-tab-carousel .items .tabs-image {
     height: 265px;
     width: 100%;
 }
+.product-tab-carousel .items .tabs-image .product-image-container{
+    width: 100% !important;
+} 
 .product-tab-carousel .items .tabs-image img {
     vertical-align: middle;
     border: 0;
-    max-width: 100%;
+    width: 100%;
     height: auto;
 }
-.product-tab-carousel .items .tabs-title>p {
+.product-tab-carousel .items .tabs-title p {
+    color : #8acdce !important;
     font-family: AvenirNextCondensed-Regular;
     font-size: 18px;
     text-align: center;
@@ -100,4 +112,374 @@
     padding: 5px 15px;
     text-transform: uppercase;
     width: 165px;
+}
+.contain-category-img-right .promo-img {
+    margin-right: 21px;
+    height: 240px;
+    margin-bottom: 20px;
+    position: relative;
+}
+.contain-category-img-right .promo-img img{
+    width : 100%;
+    height: 100%;
+}
+.contain-category-img-right .description {
+    position: absolute;
+    bottom: -20px;
+    width: 100%;
+    height: 100%;
+}
+.contain-category-img-right .description .block-table {
+    background: white;
+    width: 200px;
+    margin: 150px auto;
+    padding: 8px;
+}
+.contain-category-img-right .description .title {
+    font-weight: normal;
+    font-family: AvenirNextCondensed-Regular;
+    text-align: center;
+    font-size: 25px;
+    color: #8acdce;
+}
+.contain-category-img-left{
+    height : 100%;
+    overflow : hidden;
+}
+.contain-category-img-left img {
+    width : 100%;
+    height : 100%
+}
+.section-intro{
+    height: 317px;
+    background-image: url(//cdn.shopify.com/s/files/1/0003/2820/4319/t/8/assets/paralax.png?1218611…);
+    background-size: contain;
+    background-position: 100%;
+    background-attachment: fixed;
+    float: left;
+    width: 100%;
+}
+.section-intro .row{
+    margin-left: 0;
+    margin-right: 0;
+}
+.section-intro .section-services {
+    padding: 33px 0;
+}
+.section-intro .section-services .items {
+    position: relative;
+    width: 33%;
+    float: left;
+    padding: 33px;
+    text-align: center;
+}
+.section-intro .section-services .items a{
+    border-color: rgb(233, 233, 233);
+    background: rgba(0, 0, 0, 0);
+}
+.section-intro .section-services .items a span.icon.icon-local_shipping, span.icon.icon-public, span.icon.icon-add {
+    float: left;
+    width: 100%;
+    text-align: center;
+    color: #000000;
+}
+.section-intro .section-services .items .title {
+    color: #8acdce;
+    padding: 0 0 8px;
+    float: left;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+.icon, .collection aside nav.tags li.active.close a:after {
+    font-family: 'ficon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+.section-intro span.icon.icon-local_shipping:before {
+    position: absolute;
+    top: -72px;
+    transform: translate(-50%);
+    background: #f6f6f6 none repeat scroll 0 0;
+    border: 4px solid #fff;
+    border-radius: 51px;
+    content: '\f0d1';
+    font-family: fontawesome;
+    font-size: 47px;
+    padding: 25px 25px 20px 25px;
+}
+.section-intro span.icon.icon-public::before {
+    position: absolute;
+    top: -72px;
+    transform: translate(-50%);
+    background: #f6f6f6 none repeat scroll 0 0;
+    border: 4px solid #fff;
+    border-radius: 51px;
+    content: '\f0ac';
+    font-family: fontawesome;
+    font-size: 47px;
+    padding: 25px 27px 20px 27px;
+}
+.section-intro span.icon.icon-add::before {
+    position: absolute;
+    top: -72px;
+    transform: translate(-50%);
+    background: #f6f6f6 none repeat scroll 0 0;
+    border: 4px solid #fff;
+    border-radius: 51px;
+    content: '+';
+    font-size: 47px;
+    padding: 22px 33px 22px 33px;
+    font-weight: bold;
+}
+.section-intro .section-services .items a.services-block-border.height-md{
+    margin-top: 20px;
+    float: left;
+    width: 100%;
+}
+.section-intro .section-services .items p {
+    float: left;
+    width: 100%;
+    font-size: 16px;
+    line-height: 25px;
+}
+.section-intro .custom-layout.carousel-products-mobile-md {
+    background: rgba(255,255,255,0.68) none repeat scroll 0 0;
+    height: unset;
+    float : left;
+}
+.section-footer{
+    float: left;
+    width: 100%;
+}
+.section-footer .site-footer {
+    padding: 40px 40px;
+    color: #687576;
+    background-color: #8acdce;
+    text-align: center;
+    padding: 0px;
+}
+.section-footer footer.site-footer .wrapper {
+    max-width: 100%;
+    padding-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.section-footer .grid{
+    margin: 0;
+    font-size: 0;
+    margin-left: -30px;
+    direction: ltr;
+    padding: 56px 34px 29px !important;
+    background: #8acdce;
+}
+span.icon-fallback-text span.fallback-text, button.icon-fallback-text span.fallback-text, span.icon-text span.fallback-text, button.icon-text span.fallback-text {
+    display: none;
+}
+.section-footer .site-footer .grid h4,  .site-footer .grid .h4, .site-footer .grid a, .site-footer .grid p {
+    color: white;
+}
+.site-footer h4, .site-footer .h4 {
+    font-size: 1.25em;
+    text-transform: uppercase;
+}
+.site-footer .grid h4, .site-footer .grid .h4 {
+    font-weight: bold;
+}
+.site-footer .grid .box {
+    text-align: left;
+}
+.site-footer .grid>* {
+    display: inline-block;
+}
+.site-footer .layout-6 {
+    float: left;
+    font-size: 17px;
+    width: 16%;
+    padding-top: 9px;
+}
+.site-footer img.secondary_logo {
+    width: 86px;
+    margin: 0 auto;
+    display: table;
+}
+.section-footer .grid .box.box-1.box-first.layout-6.social {
+    padding: 0 0 0 0;
+}
+
+.site-footer ul {
+    margin: 0;
+    padding: 0;
+}
+.section-footer ul.social-icons {
+    text-align: center;
+}
+.site-footer ul.social-icons li {
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 1.875em;
+}
+.site-footer .social-icons span.icon {
+    border: 1px solid white;
+    border-radius: 21px;
+    padding: 12px;
+}
+.site-footer span.icon-fallback-text span.icon,.site-footer button.icon-fallback-text span.icon,.site-footer span.icon-text span.icon,.site-footer button.icon-text span.icon {
+    position: relative;
+    top: 2px;
+    display: inline-block;
+}
+.site-footer .social-icons .icon, .site-footer .social-icons .collection aside nav.tags li.active.close a:after, .collection aside nav.tags li.active.close .site-footer .social-icons a:after {
+    color: white;
+    font-size: 19px;
+}
+.site-footer .icon,.site-footer .collection aside nav.tags li.active.close a:after {
+    font-family: 'ficon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.site-footer ul li {
+    line-height: 1.4;
+}
+.site-footer ul li a {
+    color: #fff;
+    font-family: Montserrat,sans-serif;
+    text-decoration: none;
+    font-size: 0.875em;
+}
+
+.site-footer .grid:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+.grid:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+.site-footer form {
+    margin: 0 auto;
+    max-width: 400px;
+    display: table;
+    width: 100%;
+    border-collapse: collapse;
+    height: 44px;
+}
+.site-footer input {
+    border: 2px solid #fff;
+}
+.site-footer input {
+    border: 2px solid #565656;
+    padding: 8px 8px;
+    font-size: 0.6875em;
+    color: #565656;
+    background-color: transparent;
+    height: 44px;
+}
+.site-footer form .input-row {
+    margin-bottom: 6px;
+}
+.site-footer form .input-wrapper {
+    display: table;
+    width: 100%;
+}
+.site-footer input {
+    border: 2px solid #fff;
+}
+.site-footer form .button-wrapper {
+    display: table-cell;
+    width: 1%;
+    vertical-align: middle;
+}
+.site-footer button {
+    border-radius: 0;
+}
+.site-footer button {
+    margin-left: 0;
+    width: 100%;
+}
+.site-footer button {
+    background-color: #fff;
+    color: #333;
+}
+.site-footer button {
+    padding: 10px;
+    font-size: 0.6875em;
+    text-transform: uppercase;
+    font-family: Montserrat,sans-serif;
+    border: 0;
+    display: inline-block;
+    height: 44px;
+    word-break: normal;
+    -moz-hyphens: none;
+    hyphens: none;
+}
+.section-footer .site-footer p.copyright {
+    padding: 15px 64px;
+    width: 100%;
+}
+.section-footer .site-footer p.copyright {
+    background: #8acdce none repeat scroll 0 0;
+    color: #fff;
+    text-align: center;
+}
+.section-footer .site-footer p.copyright {
+    margin: 0px;
+    font-size: 12px;
+    font-weight: bold;
+}
+.site-footer .box.payment-types {
+    box-sizing: border-box;
+    font-size: 16px;
+    min-height: 1px;
+    vertical-align: top;
+    width: 100%;
+    padding-top: 20px;
+}
+.box.payment-types {
+    display: none;
+}
+
+.section-blog{
+    height : 500px;
+    overflow : hidden;
+}
+.section-blog .col-4 .box-img{
+    overflow: hidden;
+    height: 150px;
+}
+.section-blog .col-4 .post-blog {
+    height : 250px;
+    overflow : hidden;
+}
+.section-blog .col-4 .post-blog .box-title {
+    height : 100px;
+    overflow : hidden;
+}
+.section-blog .col-4 .post-blog .box-title .title{
+    height : 20px;
+    color: #8acdce;
+    overflow : hidden;
+}
+.section-blog .col-4 .post-blog .box-title .description{
+    height : 80px;
+    overflow : hidden;
+}
+.section-blog .post-blog .box-img img{
+    height : 100%;
+    width : 100%;
 }
