--- a/app/design/frontend/Magento/Custom/web/css/source/_variables.less
+++ b/app/design/frontend/Magento/Custom/web/css/source/_variables.less
@@ -78,7 +78,7 @@
 @header_cart_background:#ffffff;
 @header_text_cart:#999999;
 @header_search_text:#999999;
-@header_search_background:#282828;
+@header_search_background:#8acdce;
 
 @header_drop_text:#999999;
 @header_drop_background:#ffffff;
@@ -88,7 +88,7 @@
 @menu_hover_background:#525252;
 @menu_text:#ffffff;
 @menu_hover_text:#ffffff;
-@menu_border:#282828;
+@menu_border:#8acdce;
 @menu_font: ~'500 12px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
 
 //Vertical Menu
@@ -100,8 +100,8 @@
 @vermenu_font: ~'500 12px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
 
 @menu_drop_background:#ffffff;
-@menu_drop_text_title: #282828;
-@menu_drop_text:#282828;
+@menu_drop_text_title: #8acdce;
+@menu_drop_text:#8acdce;
 @menu_drop_hover_text:#fc7070;
 @menu_drop_border:#dfdfdf;
 @menu_drop_font: ~'400 12px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
@@ -110,15 +110,15 @@
 @main_background:#f2f2f2;
 @main_block_background:#ffffff;
 @main_block_title_background:#ffffff;
-@main_block_text_background:#282828;
+@main_block_text_background:#8acdce;
 
-@main_text:#282828;
+@main_text:#8acdce;
 @main_hover_text:#fc7070;
 @main_title_text:#121212;
 @main_alink_text:#999999;
 @main_note_text:#999999;
-@main_productname_text:#282828;
-@main_price_text:#282828;
+@main_productname_text:#8acdce;
+@main_price_text:#8acdce;
 @main_hover_text_box:#ffffff;
 @main_border:#e1e1e1;
 @main_title_border:#121212;
@@ -137,31 +137,31 @@
 @footer_background_image_option:~'0 0 no-repeat fixed';
 @footer_top_background: #fce0dd;
 @footer_bottom_background: #ffffff;
-@footer_text:#282828;
-@footer_title_text:#282828;
+@footer_text:#8acdce;
+@footer_title_text:#8acdce;
 @footer_hover_text:#fc7070;
-@footer_border:#282828;
+@footer_border:#8acdce;
 
 //Button
 @btn_default_background: #ffffff;
-@btn_default_text: #282828;
-@btn_default_border: #282828;
+@btn_default_text: #8acdce;
+@btn_default_border: #8acdce;
 @btn_default_font: ~'600 14px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
 
-@btn_primary_background: #282828;
+@btn_primary_background: #8acdce;
 @btn_primary_text: #ffffff;
-@btn_primary_border: #282828;
+@btn_primary_border: #8acdce;
 @btn_primary_font: ~'600 14px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
 
 
 @btn_productitem_background: #ffffff;
-@btn_productitem_text: #282828;
-@btn_productitem_border: #282828;
+@btn_productitem_text: #8acdce;
+@btn_productitem_border: #8acdce;
 @btn_productitem_font: ~'600 14px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
 
-@btn_hover_background: #282828;
+@btn_hover_background: #8acdce;
 @btn_hover_text: #ffffff;
-@btn_hover_border: #282828;
+@btn_hover_border: #8acdce;
 @btn_hover_font: ~'600 14px/1.35 Poppins, Helvetica Neue, Verdana, Arial, sans-serif';
 
 
@@ -420,7 +420,7 @@
 
 @rating-icon__font-size: 14px;
 @rating-icon__letter-spacing: 0px;
-@rating-icon__active__color: #282828;
+@rating-icon__active__color: #8acdce;
 @rating-icon__color: #a1a1a1;
 
 //
